--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+	<meta charset="UTF-8">
+	<title>Sider</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <div class="test">
-            <div class="p">
-                <img src="/382379287_216154961467516_6271095559751554393_n.jpg" alt="" width="100" height="70">
-            </div>
-            <div class="p">
-                <ul>
-                    <li>bonjour le monde</li>
-                    <li>Aujourd'hui on va faire quelque chose de magnifique</li>
-                    <li>je s'appelle groot</li>
-                    <li>voir comment ça va se passer</li>
-                    <li>sur ce à plus</li>
-                </ul>
-            </div>
-            <div class="p">
-                <img src="/Hakari Kinji.jpg" alt=""width="100" height="70">
-            </div>
-        </div>
+
+<div class="wrapper">
+    <div class="sidebar">
+        <h2>Titre</h2>
+        <ul>
+            <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
+            <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
+            <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
+        </ul> 
     </div>
-   
-    
+    <div class="main_content">
+        <div class="header">tu peux mettre quelque chose ici</div>  
+        <div class="info">
+          <div>quae eius culpa eveniet voluptatibus repellat illum tenetur, facilis porro. Quae fuga odio perferendis itaque alias sint, beatae non maiores magnam ad, veniam tenetur atque ea exercitationem earum eveniet totam ipsam magni tempora aliquid ullam possimus? Tempora nobis facere porro, praesentium magnam provident accusamus temporibus! Repellendus harum veritatis itaque molestias repudiandae ea corporis maiores non obcaecati libero, unde ipsum consequuntur aut consectetur culpa magni omnis vero odio suscipit vitae dolor quod dignissimos perferendis eos? Consequuntur!</div>
+      </div>
+    </div>
+</div>
+
 </body>
 </html>
