--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
         <h2>Titre</h2>
         <ul>
             <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-            <li><a href="index2.html"><i class="fas fa-user"></i>Profile</a></li>
+            <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
             <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
         </ul> 
     </div>
@@ -21,6 +21,7 @@
         <div class="info">
           <div>quae eius culpa eveniet voluptatibus repellat illum tenetur, facilis porro. Quae fuga odio perferendis itaque alias sint, beatae non maiores magnam ad, veniam tenetur atque ea exercitationem earum eveniet totam ipsam magni tempora aliquid ullam possimus? Tempora nobis facere porro, praesentium magnam provident accusamus temporibus! Repellendus harum veritatis itaque molestias repudiandae ea corporis maiores non obcaecati libero, unde ipsum consequuntur aut consectetur culpa magni omnis vero odio suscipit vitae dolor quod dignissimos perferendis eos? Consequuntur!</div>
       </div>
+      <img src="/sary/86755ffda8b542258b5ba94851134adb.jpg" alt="">
     </div>
 </div>
 
