--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="index2.html"><i class="fas fa-user"></i>Profile</a></li>
             <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
+	    <img src ="Hakari Kinji.jpg" alt ="" width = "200">
         </ul> 
     </div>
     <div class="main_content">
